<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/bottomSheet"
    tools:context=".view.fragment.bottomSheet.BottomSheetFragment">

    <ImageView
        android:id="@+id/imgCategory"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:contentDescription="@string/category_image"
        android:scaleType="fitCenter"

        android:src="@drawable/baseline_search_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:fontFamily="@font/myfont"
        android:text="@string/category_beef"
        android:textColor="@color/g_black"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/baseline_category_24"
        app:drawableTint="@color/g_black"
        app:layout_constraintEnd_toStartOf="@id/txtArea"
        app:layout_constraintStart_toEndOf="@id/imgCategory"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:fontFamily="@font/myfont"
        android:text="@string/area_india"
        android:textColor="@color/g_black"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/baseline_location_on_24"
        app:drawableTint="@color/g_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtCategories"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMealName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:fontFamily="@font/myfont"
        android:text="@string/meal_name"
        android:textColor="@color/g_black"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        app:drawableTint="@color/g_black"
        app:layout_constraintStart_toEndOf="@id/imgCategory"
        app:layout_constraintTop_toBottomOf="@id/txtArea" />

    <TextView
        android:id="@+id/txtReadMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:fontFamily="@font/myfont"
        android:text="@string/read_more"
        android:textColor="@color/g_black"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        app:drawableTint="@color/g_black"
        app:layout_constraintStart_toEndOf="@id/imgCategory"
        app:layout_constraintTop_toBottomOf="@id/txtMealName" />

</androidx.constraintlayout.widget.ConstraintLayout>