<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".view.activity.MealActivity">

<com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appBar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_230sdp"
    android:backgroundTint="@color/g_black">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/collapsingToolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:collapsedTitleTextColor="@color/white"
        app:contentScrim="@color/primary"
        app:expandedTitleTextColor="@color/white"
        app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
        app:title="Meal Name">

        <ImageView
            android:id="@+id/imgMealDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/meal"
            android:scaleType="centerCrop"
            app:layout_collapseMode="parallax" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_collapseMode="pin" />

    </com.google.android.material.appbar.CollapsingToolbarLayout>

</com.google.android.material.appbar.AppBarLayout>

<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/fabFavorites"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/_6sdp"
    android:contentDescription="@string/favorites"
    android:src="@drawable/baseline_favorite_border_24"
    app:backgroundTint="@color/primary"
    app:layout_anchor="@id/appBar"
    app:layout_anchorGravity="bottom|end"
    app:fabSize="mini"
    app:tint="@color/white" />

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtCategories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:fontFamily="@font/myfont"
            android:text="@string/category_beef"
            android:textColor="@color/g_black"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/baseline_category_24"
            app:drawableTint="@color/g_black"
            app:layout_constraintEnd_toStartOf="@id/txtArea"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtArea"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_2sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:fontFamily="@font/myfont"
            android:text="@string/area_india"
            android:textColor="@color/g_black"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/baseline_location_on_24"
            app:drawableTint="@color/g_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtCategories"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txtInstruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:fontFamily="@font/myfont"
            android:text="@string/instruction"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtCategories" />

        <TextView
            android:id="@+id/txtDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/txtInstruction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtInstruction"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>

<ImageView
    android:id="@+id/imgYoutube"
    android:layout_width="@dimen/_40sdp"
    android:layout_height="@dimen/_40sdp"
    android:layout_gravity="bottom|center"
    android:layout_marginBottom="@dimen/_10sdp"
    android:src="@drawable/baseline_ondemand_video_24"

    />

<com.google.android.material.progressindicator.LinearProgressIndicator
    android:id="@+id/progressBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:indeterminate="true"
    app:layout_anchor="@id/appBar"
    app:layout_anchorGravity="bottom"
    android:visibility="gone"
    />

</androidx.coordinatorlayout.widget.CoordinatorLayout>