<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_3sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/myfont"
            android:text="@string/home"
            android:textColor="@color/primary"
            android:textSize="@dimen/_25ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/imgSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgSearch"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginVertical="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:contentDescription="@string/search"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_search_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtHome"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtRandom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:fontFamily="@font/myfont"
            android:text="@string/what_would_you_like_to_it"
            android:textColor="@color/black"
            android:textSize="@dimen/_17ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtHome" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardRandom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_160sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardUseCompatPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtRandom">

            <ImageView
                android:id="@+id/imgRandom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtPopular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_20sdp"
            android:fontFamily="@font/myfont"
            android:text="@string/what_would_you_like_to_it"
            android:textColor="@color/black"
            android:textSize="@dimen/_17ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardRandom" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recPopular"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_90sdp"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPopular" />

        <TextView
            android:id="@+id/txtCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_20sdp"
            android:fontFamily="@font/myfont"
            android:text="@string/categories"
            android:textColor="@color/black"
            android:textSize="@dimen/_17ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recPopular" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardUseCompatPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtCategory">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recCategories"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none" />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>